crates/test-files/fixtures/compile_errors/ctx_missing_internal_call.fe
contract Foo {
    favorite_number: u256

    pub fn bar(ctx: Context) -> u256 {
        return ctx.block_number()
    }

    pub fn baz(mut self, ctx: Context) {
        self.favorite_number = bar()
    }
}
